--- a/beranda.html
+++ b/beranda.html
@@ -30,9 +30,9 @@
         <img src="logo.png" alt="Logo Aplikasi">
         <h1>Selamat Datang di Monetrix</h1>
         <p>Kelola Uang, Wujudkan Impian</p>
-        <button class="cta-button">
-            <a href="daftar.html">Daftar sekarang</a>
-        </button>
+        <div class="back-button">
+            <button onclick="goToIndex()">Daftar Sekarang</button>
+        </div>
         <div class="login-link">
             <p>Sudah punya akun? <a href="login.html">Masuk</a></p>
         </div>
@@ -65,6 +65,9 @@
         function toggleMenu() {
             const nav = document.querySelector('.nav');
             nav.classList.toggle('active');
+        }
+        function goToIndex() {
+            window.location.href = 'daftar.html';
         }
     </script>
 </body>
