--- a/dashboard.html
+++ b/dashboard.html
@@ -19,7 +19,7 @@
         </div>
         <nav class="nav">
             <a href="aktivitas_transaksi.html">Transaksi</a>
-            <a href="login.html">Logout</a>
+            <a href="index.html">Logout</a>
         </nav>
     </header>
 
