--- a/aktivitas_transaksi.html
+++ b/aktivitas_transaksi.html
@@ -19,7 +19,7 @@
         </div>   
         <nav class="nav">
             <a href="dashboard.html">Dashboard</a>
-            <a href="login.html">Logout</a>
+            <a href="index.html">Logout</a>
         </nav>
     </header>
 
