--- a/pinjaman.html
+++ b/pinjaman.html
@@ -20,7 +20,7 @@
         <nav class="nav">
             <a href="dashboard.html">Dashboard</a>
             <a href="aktivitas_transaksi.html">Transaksi</a>
-            <a href="login.html">Logout</a>
+            <a href="index.html">Logout</a>
         </nav>
     </header>
 
